backend: update serverless - add cors, authorizer

--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -1,3 +1,4 @@
+org: lucene_nguyen
 service: serverless-todo-app
 
 plugins:
@@ -8,6 +9,7 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: nodejs14.x
+  region: us-east-1
 
 functions:
 
@@ -21,6 +23,8 @@ functions:
       - http:
           method: get
           path: todos
+          cors: true
+          authorizer: Auth
 
   # TODO: Configure this function
   CreateTodo:
@@ -29,6 +33,8 @@ functions:
       - http:
           method: post
           path: todos
+          cors: true
+          authorizer: Auth
 
   # TODO: Configure this function
   UpdateTodo:
@@ -37,6 +43,8 @@ functions:
       - http:
           method: patch
           path: todos/{todoId}
+          cors: true
+          authorizer: Auth
 
   # TODO: Configure this function
   DeleteTodo:
@@ -45,6 +53,8 @@ functions:
       - http:
           method: delete
           path: todos/{todoId}
+          cors: true
+          authorizer: Auth
 
   # TODO: Configure this function
   GenerateUploadUrl:
@@ -53,6 +63,8 @@ functions:
       - http:
           method: post
           path: todos/{todoId}/attachment
+          cors: true
+          authorizer: Auth
 
 resources:
   Resources:
