--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -44,10 +44,16 @@ functions:
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
         Resource:
           - "*"
+      - Effect:
+        Action: 
+          - dynamodb:Query
+          - dynamodb:Scan
+          - dynamodb:GetItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODOS_CREATED_AT_INDEX}
 
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
@@ -68,8 +74,8 @@ functions:
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
         Resource:
           - "*"
 
@@ -93,8 +99,8 @@ functions:
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
         Resource:
           - "*"
 
@@ -115,8 +121,8 @@ functions:
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
-          - "xray:PutTraceSegments"
-          - "xray:PutTelemetryRecords"
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
         Resource:
           - "*"
 
@@ -136,6 +142,12 @@ functions:
           - 's3:GetObject'
           - 's3:PutObject'
         Resource: arn:aws:s3:::${self:provider.environment.TODOS_S3_BUCKET}/*
+      - Effect: Allow
+        Action:
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
+        Resource:
+          - '*'
 
 resources:
   Resources:
