--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-7brd6quydpm30rlu.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=RLtFh4P57SqEPLLSYEbS5vGhYu6dyCte
+REACT_APP_API_ENDPOINT=https://4gxv9d3bda.execute-api.us-east-1.amazonaws.com/dev
